celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery
          image: django-app:latest
          imagePullPolicy: Never 
          command: ["/bin/sh", "-c"]
          args:
            - celery -A extractor worker --loglevel=info --concurrency=1
          volumeMounts:
            - name: model-volume
              mountPath: /app/model  
          resources:
            requests:
              memory: "18Gi"
              cpu: "500m"
            limits:
              memory: "24Gi"
              cpu: "4"          
      volumes:
        - name: model-volume
          persistentVolumeClaim:
            claimName: model-pvc
