django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: django-app:latest
          imagePullPolicy: Never 
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-volume
              mountPath: /app/staticfiles
              readOnly: true
            - name: model-volume
              mountPath: /app/model
              readOnly: true

      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-pvc
        - name: model-volume
          persistentVolumeClaim:
            claimName: model-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
