rabbitmq-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-exporter
  template:
    metadata:
      labels:
        app: rabbitmq-exporter
    spec:
      containers:
        - name: exporter
          image: kbudde/rabbitmq-exporter:latest
          ports:
            - containerPort: 9419
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-exporter
spec:
  selector:
    app: rabbitmq-exporter
  ports:
    - name: metrics
      port: 9419
      targetPort: 9419
