static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
        - name: static
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-volume
              mountPath: /usr/share/nginx/html/static
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  selector:
    app: static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
